Table "user" {
  "user_id" INT [pk, not null]
  "username" INT [not null]
  "password" INT [not null]
  "role" INT [not null]
  "created_at" INT [not null]

  Indexes {
    username [unique]
  }
}

Table "user_profile" {
  "user_profile_id" INT [not null]
  "first_name" INT [not null]
  "last_name" INT [not null]
  "email" INT [not null]
  "date_of_birth" INT [not null]
  "phone_number" INT [not null]
  "user_id" INT [pk, not null]
}

Table "attendee" {
  "user_id" INT [pk, not null]
}

Table "employee" {
  "user_id" INT [pk, not null]
}

Table "organizer" {
  "user_id" INT [pk, not null]
}

Table "log" {
  "log_id" INT [pk, not null]
  "type" INT [not null]
  "timestamp" INT [not null]
  "description" INT
  "data" INT
  "user_id" INT
}

Table "image" {
  "image_id" INT [pk, not null]
  "url" INT [not null]
  "user_id" INT
}

Table "country" {
  "country_id" INT [pk, not null]
  "name" INT [not null]
  "iso_code_2" INT [not null]

  Indexes {
    iso_code_2 [unique]
  }
}

Table "city" {
  "city_id" INT [pk, not null]
  "name" INT [not null]
  "postal_code" INT [not null]
  "country_id" INT [not null]
}

Table "address" {
  "address_id" INT [pk, not null]
  "street" INT [not null]
  "number" INT [not null]
  "apartment_suite" INT [not null]
  "user_id" INT
  "city_id" INT [not null]
}

Table "festival" {
  "name" INT [not null]
  "description" INT [not null]
  "start_date" INT [not null]
  "end_date" INT [not null]
  "capacity" INT [not null]
  "status" INT [not null]
  "store_status" INT [not null]
  "festival_id" INT [pk, not null]
  "address_id" INT [not null]
}

Table "pricelist" {
  "pricelist_id" INT [pk, not null]
  "festival_id" INT [not null]
}

Table "item" {
  "name" INT [not null]
  "description" INT [not null]
  "available_number" INT [not null]
  "remaining_number" INT [not null]
  "item_id" INT [pk, not null]
  "festival_id" INT [not null]
}

Table "ticket_type" {
  "item_id" INT [pk, not null]
}

Table "package_addon" {
  "category" INT [not null]
  "item_id" INT [pk, not null]
}

Table "camp_addon" {
  "camp_name" INT [not null]
  "item_id" INT [pk, not null]
}

Table "transport_addon" {
  "transport_type" INT [not null]
  "departure_time" INT [not null]
  "arrival_time" INT [not null]
  "return_departure_time" INT [not null]
  "return_arrival_time" INT [not null]
  "item_id" INT [pk, not null]
  "city_id" INT [not null]
  "departures_fromcity_id" INT [not null]
}

Table "camp_equipment" {
  "camp_equipment_id" INT [pk, not null]
  "name" INT [not null]
  "item_id" INT [not null]
}

Table "works_at" {
  "user_id" INT [not null]
  "festival_id" INT [not null]

  Indexes {
    (user_id, festival_id) [pk]
  }
}

Table "organizes" {
  "user_id" INT [not null]
  "festival_id" INT [not null]

  Indexes {
    (user_id, festival_id) [pk]
  }
}

Table "has_images" {
  "festival_id" INT [not null]
  "image_id" INT [not null]

  Indexes {
    (festival_id, image_id) [pk]
  }
}

Table "illustrated_by" {
  "item_id" INT [not null]
  "image_id" INT [not null]

  Indexes {
    (item_id, image_id) [pk]
  }
}

Table "pricelist_item" {
  "date_from" INT [not null]
  "date_to" INT [not null]
  "is_fixed" INT [not null]
  "pricelist_item_id" INT [pk, not null]
  "pricelist_id" INT [not null]
  "item_id" INT [not null]
}

Ref:"user"."user_id" < "user_profile"."user_id"

Ref:"user"."user_id" < "attendee"."user_id"

Ref:"user"."user_id" < "employee"."user_id"

Ref:"user"."user_id" < "organizer"."user_id"

Ref:"user"."user_id" < "log"."user_id"

Ref:"user_profile"."user_id" < "image"."user_id"

Ref:"country"."country_id" < "city"."country_id"

Ref:"user_profile"."user_id" < "address"."user_id"

Ref:"city"."city_id" < "address"."city_id"

Ref:"address"."address_id" < "festival"."address_id"

Ref:"festival"."festival_id" < "pricelist"."festival_id"

Ref:"festival"."festival_id" < "item"."festival_id"

Ref:"item"."item_id" < "ticket_type"."item_id"

Ref:"item"."item_id" < "package_addon"."item_id"

Ref:"package_addon"."item_id" < "camp_addon"."item_id"

Ref:"package_addon"."item_id" < "transport_addon"."item_id"

Ref:"city"."city_id" < "transport_addon"."city_id"

Ref:"city"."city_id" < "transport_addon"."departures_fromcity_id"

Ref:"camp_addon"."item_id" < "camp_equipment"."item_id"

Ref:"employee"."user_id" < "works_at"."user_id"

Ref:"festival"."festival_id" < "works_at"."festival_id"

Ref:"organizer"."user_id" < "organizes"."user_id"

Ref:"festival"."festival_id" < "organizes"."festival_id"

Ref:"festival"."festival_id" < "has_images"."festival_id"

Ref:"image"."image_id" < "has_images"."image_id"

Ref:"package_addon"."item_id" < "illustrated_by"."item_id"

Ref:"image"."image_id" < "illustrated_by"."image_id"

Ref:"pricelist"."pricelist_id" < "pricelist_item"."pricelist_id"

Ref:"item"."item_id" < "pricelist_item"."item_id"
